<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".UI.SplashScreen">

    <TextView
        android:id="@+id/splashScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/splashScreenTitle"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/splashScreenAppVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/ver"
        android:textColor="#abc"
        android:textSize="11sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/splashScreenWebsiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/website"
        android:textColor="#fff"
        android:textStyle="bold" />


</RelativeLayout>